# paperless-cli

./: .gitignore  API_ANALYSIS.md  CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  SKILL.md  lefthook.yml  pyproject.toml  pytest.ini  release-please-config.json  setup.py
.github/workflows/: ci.yml  conventional-commits.yml  release-please.yml
docs/: architecture.md  cli-parity.md  release-process.md  rust-migration.md  testing-strategy.md
paperless_ngx/: README.md  __init__.py  __main__.py  paperless_ngx_cli.py
paperless_ngx/core/: __init__.py  correspondents.py  doc_types.py  documents.py  export.py  project.py  search.py  session.py  tags.py  tasks.py
paperless_ngx/tests/: TEST.md  __init__.py  conftest.py  test_core.py  test_full_e2e.py
paperless_ngx/utils/: __init__.py  paperless_backend.py  repl_skin.py
site/: architecture.html  cli-parity.html  index.html  migration.html  readme.html  release.html  skills.html  styles.css  testing.html
skills/paperless-admin/: SKILL.md
skills/paperless-documents/: SKILL.md
skills/paperless-pdf/: SKILL.md
src/: api.rs  cli.rs  client.rs  config.rs  demo.rs  error.rs  lib.rs  main.rs  models.rs  output.rs  pdf.rs  render.rs  security.rs  service.rs  services.rs  session.rs  tui.rs
tests/: cli_integration.rs  config_and_client.rs  output_tui_security.rs  pdf_util.rs
