[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
  "agent-harness",
  "paperless_ngx_cli.egg-info",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
exclude = "(agent-harness|paperless_ngx/tests)"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true

[tool.pylint.main]
ignore-paths = [
  "^agent-harness/.*$",
  "^paperless_ngx/tests/.*$",
  "^paperless_ngx/__pycache__/.*$",
]
jobs = 0

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
  "duplicate-code",
  "line-too-long",
  "too-many-arguments",
  "too-many-positional-arguments",
]

[tool.bandit]
exclude_dirs = [
  "agent-harness",
  "paperless_ngx/tests",
]
skips = ["B404", "B603"]
